Narrative Block: fix overflow

--- a/src/components/Blocks/NarrativeBlock/index.scss
+++ b/src/components/Blocks/NarrativeBlock/index.scss
@@ -1,6 +1,7 @@
 .component-narrative-block {
   padding-top: 80px;
   padding-bottom: 115px;
+  overflow: hidden;
 
   h2 {
     margin: 0;
